# ntripcaster

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.txt  build.zig  build.zig.zon  ntripcaster.service
.github/workflows/: ci.yml  release.yml
conf/: ntripcaster.conf
docs/: ARCHITECTURE.md
legacy/: README.md  configure  ntripcaster.service  ntripcaster.sh
legacy/src/: definitions.h  main.c  ntripcaster.h  source.c
ntripcaster0.1.5/: Makefile.am  Makefile.in  config.h  config.h.in  configure.in
ntripcaster0.1.5/conf/: Makefile.am  Makefile.in  ntripcaster.conf.example
ntripcaster0.1.5/src/: Makefile.am  Makefile.in  client.c
packaging/: build-deb.sh  build-opkg.sh  build-rpm.sh
packaging/deb/: conffiles  control.in  postinst  postrm
packaging/opkg/: control.in
packaging/rpm/: ntripcaster.spec.in
scripts/: rtk2go_fkp.sh
src/: lib.zig  log.zig  main.zig  server.zig
src/auth/: basic.zig
src/config/: parser.zig
src/fkp/: bits.zig  demo.zig  engine.zig  msm7.zig  type59.zig
src/ntrip/: client.zig  protocol.zig  rtcm3.zig  source.zig  sourcetable.zig
src/relay/: engine.zig
tests/: test_all.zig  test_auth.zig  test_config.zig  test_fkp.zig  test_interop.sh  test_protocol.zig  test_relay.zig  test_rtcm3.zig  test_server.zig  test_sourcetable.zig
tools/: fkp_demo.zig
